--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <form onsubmit="javascript:myFunction();return false;">
                 <input type="text" id="search" autofocus>
                 <input type="button" id="search-button" value="Search" onclick="myFunction()">
+                <input type="button" id="searchbtn" value="Get All Definitions">
             </form><br>
         </div>
         <div id="result"></div>
